# ZImageSR

./: AGENT.md  README.md  TEST_PLAN.md  pyproject.toml  zenml.yaml
docs/: zimage_fluxsr_ftd_training_v2.ipynb
docs/adr/: 001-training-resume-support.md  002-checkpoint-eval-and-resume.md
docs/debug outputs/: dummy_forward_result.txt  forward_signature.txt  forward_source.py  named_modules.txt  patchify_and_embed_source.py  transformer_config.json
src/zimagesr/: __init__.py  cli.py
src/zimagesr/data/: __init__.py  degradation.py  offline_pairs.py  s3_io.py
src/zimagesr/pipelines/: __init__.py  zenml_bootstrap.py  zenml_pipeline.py
src/zimagesr/training/: __init__.py  config.py  dataset.py  inference.py  lora.py  losses.py  train.py  transformer_utils.py
tests/: conftest.py  test_cli.py  test_degradation.py  test_ftd_dataset.py  test_inference.py  test_integration.py  test_lora.py  test_losses.py  test_offline_pairs.py  test_s3_io.py  test_train.py  test_train_cli.py  test_transformer_utils.py  test_zenml_pipeline.py
